--- a/PracProb.qmd
+++ b/PracProb.qmd
@@ -4,23 +4,26 @@ author: "Naomi Moraes"
 format: html
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
 ```{r}
-1 + 1
+#create function
+
+f <- function(x){
+  x^2
+}
+
+p <- function(a){
+  2*(3*a +2)^4 - 5
+}
+
+dp_da <- D(expression(2*(3*a +2)^4 - 5), "a")
+dp_da
+
+df_dx <- D(expression(x^2),"x")
+df_dx
+
+
+
+
+
 ```
 
-You can add options to executable code like this 
-
-```{r}
-#| echo: false
-2 * 2
-```
-
-The `echo: false` option disables the printing of code (only output is displayed).
